--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "3.1.9",
     "@astrojs/tailwind": "5.1.2",
     "@types/canvas-confetti": "1.6.4",
+    "@vercel/speed-insights": "^1.1.0",
     "astro": "4.16.16",
     "autoprefixer": "10.4.20",
     "canvas-confetti": "1.9.3",
